Fix map width on mobile and improve page load times

--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -161,3 +161,34 @@
     text-align:center;
     font-size: 1.3rem;
 }
+
+/* Race map Styling */
+.gpx {
+    border: 2px #aaa solid;
+    border-radius: 5px;
+    box-shadow: 0 0 3px 3px #ccc;
+    width: 100%;
+    margin: 1em auto;
+}
+
+.gpx .map {
+    border: 1px #888 solid;
+    border-left: none;
+    border-right: none;
+    width: 100%;
+    height: 500px;
+    margin: 0;
+}
+
+.gpx ul.info {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-size: smaller;
+}
+
+.gpx ul.info li {
+    color: #666;
+    padding: 2px;
+    display: inline;
+}
